[package]
name = "sudachiclone"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yasu-umi/sudachiclone-rs"
authors = ["Yasu_umiNishikawa <yasu.umi.19910101@gmail.com>"]
categories = ["text-processing"]
keywords = ["japanese", "analyzer", "morphological", "sudachi"]
description = "sudachiclone-rs is a Rust version of Sudachi, a Japanese morphological analyzer."
edition = "2018"

[dependencies]
regex = "1.3.3"
byteorder = "1.3.2"
encoding_rs = "0.8.22"
log = { version="0.4.8", features=["std"] }
csv = "1.1.2"
rand = "0.7.3"
# succinct = "0.5.2"
unicode-normalization = "0.1.11"
serde_json = "1.0.44"
lazy_static = "1.4.0"
clap = "2.33.0"
thiserror = "1.0.9"
symlink = "0.1.0"

[features]
wasm-bindgen = ["rand/wasm-bindgen"]
